<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="doctor.Fragments.PParticularsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="12dp"
            android:textStyle="bold"
            android:text="@string/particulars"
            android:textAppearance="@style/title" />

        <EditText
            android:id="@+id/nameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/edit_text_rect"
            android:hint="@string/your_name"
            android:inputType="textCapWords"
            android:padding="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edit_text_rect"
                android:drawableEnd="@drawable/ic_expand"
                android:editable="false"
                android:focusable="false"
                android:hint="@string/age"
                android:padding="16dp"
                tools:targetApi="m" />

            <View
                android:layout_width="0dp"
                android:layout_height="4dp"
                android:layout_weight=".04" />

            <EditText
                android:id="@+id/genderEt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edit_text_rect"
                android:drawableEnd="@drawable/ic_expand"
                android:editable="false"
                android:focusable="false"
                android:hint="@string/gender"
                android:padding="16dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/dateEt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edit_text_rect"
                android:drawableEnd="@drawable/ic_expand"
                android:editable="false"
                android:focusable="false"
                android:hint="@string/date"
                android:padding="16dp"
                tools:targetApi="m" />

            <View
                android:layout_width="0dp"
                android:layout_height="4dp"
                android:layout_weight=".04" />

            <EditText
                android:id="@+id/phoneEt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edit_text_rect"
                android:editable="false"
                android:focusable="false"
                android:hint="@string/phone"
                android:padding="16dp" />

        </LinearLayout>

        <EditText
            android:id="@+id/addressEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/edit_text_rect"
            android:hint="@string/address"
            android:inputType="textCapSentences"
            android:padding="16dp" />

    </LinearLayout>
</ScrollView>