<?xml version="1.0" encoding="utf-8"?><!--
 created by Sayem Hossen Saimon on  at .
Email: saimonchowdhuryi96@gmail.com.
Phone: +8801882046404.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:padding="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_gravity="start"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:text="@string/select_gender"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_gravity="start"
        android:id="@+id/genderRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:paddingStart="16dp"
            android:text="@string/male"
            android:textColor="@color/black_text"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:text="@string/female"
            android:textColor="@color/black_text"
            android:textSize="16sp" />
    </RadioGroup>

    <LinearLayout
        android:layout_gravity="end"
        android:gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/negativeBt"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="DisAgree"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:textSize="16sp"/>
        <Button
            android:id="@+id/positiveBt"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Agree"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:textSize="16sp"/>

    </LinearLayout>

</LinearLayout>